Changes Done to Style sheet and index.html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <li>
         
             <a class="wow fadeInDown" data-wow-duration=".5s" data-wow-delay="1s" href="#home">Home</a>
-            <a class="wow fadeInDown" data-wow-duration=".5s" data-wow-delay="1.1s" href="#about"><span>About Me</span></a>
+            <a class="wow fadeInDown" data-wow-duration=".5s" data-wow-delay="1.1s" href="#about">About Me</a>
 <!--            <a class="wow fadeInDown" data-wow-duration=".5s" data-wow-delay="1.2s" href="#project">Projects</a>-->
 <!--            <a class="wow fadeInDown" data-wow-duration=".5s" data-wow-delay="1.3s" href="#contact"><span>Contact Me</span></a>-->
                 
